<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="button_pair_server_pair_server">Add server</string>
    <string name="button_pair_server_unpair_server">Remove server</string>

    <string name="dialog_are_you_sure_cant_undo_alert_message">Are you sure? Undo is not possible.</string>
    <string name="dialog_cleanup_log_title">Cleanup system log</string>
    <string name="dialog_cleanup_usage_stats_title">Cleanup usage stats</string>
    <string name="dialog_download_qr_scanner_message">Download QR Code Scanner from Play Store?</string>
    <string name="dialog_download_qr_scanner_title">No QR Code Scanner Found</string>
    <string name="dialog_no">No</string>
    <string name="dialog_server_unpair_alert_message">Are you sure? This can\'t be reverted, later you can pair with another server.</string>
    <string name="dialog_server_unpair_alert_title">Unpair current server</string>
    <string name="dialog_yes">Yes</string>

    <string name="label_about">About</string>
    <string name="label_app_name">Home System Client</string>
    <string name="label_download_server">Download Server</string>
    <string name="label_settings">Settings of\u0020</string>
    <string name="label_share_server">Share server</string>
    <string name="label_system_log">System log</string>
    <string name="label_usage_chart">Usage chart</string>

    <string name="notif_text_area_size">\u0020, motion area size:\u0020</string>
    <string name="notif_text_camera_is_rebooting">\u0020 camera is rebooting</string>
    <string name="notif_text_current_ip">, current WAN IP address:\u0020</string>
    <string name="notif_text_current_isp">Current ISP:\u0020</string>
    <string name="notif_text_delayed_arm">System will be armed in\u0020</string>
    <string name="notif_text_isp_changed">ISP changed:\u0020</string>
    <string name="notif_text_motion_detected_on_camera">Motion:\u0020</string>
    <string name="notif_text_server_started">Started with PID:\u0020</string>
    <string name="notif_text_server_started_with_pid">Server PID:\u0020</string>
    <string name="notif_text_server_stopped">Stopped at:\u0020</string>
    <string name="notif_text_simple_event">Notification from:\u0020</string>
    <string name="notif_text_system_state_is">System state is:\u0020</string>
    <string name="notif_text_video_uploaded">New video uploaded</string>

    <string name="shortcut_arm">Arm</string>
    <string name="shortcut_arm_activity_text">Requested system switch to MANUAL:ARM, you\'ll be notified</string>
    <string name="shortcut_auto">Auto</string>
    <string name="shortcut_auto_activity_text">Requested system switch to AUTOMATIC:AUTO, you\'ll be notified</string>
    <string name="shortcut_disarm">Disarm</string>
    <string name="shortcut_disarm_activity_text">Requested system switch to MANUAL:DISARM, you\'ll be notified</string>

    <string name="text_about">Home System Client version %s\n\n
        This Application is provided as-is, Author have no any responsibility if something goes wrong due to this application.\n
        This Application purpose is NOT to protect your property but to catch the event was trying to disserve your property.\n
        Every user of this Application have personal responsibility for the Application usage and the usages were applied to this Application.\n
        This Application can contain some bugs, as soon you\'ll report them to the Author as soon they will be fixed.
    </string>
    <string name="text_armed_mode">ARMED MODE</string>
    <string name="text_armed_state">ARMED STATE</string>
    <string name="text_bar_data_usage_for" formatted="true">for %02d %s</string>
    <string name="text_camera_app_text">Open camera application</string>
    <string name="text_camera_settings">Settings</string>
    <string name="text_current_server">Current server:</string>
    <string name="text_day">\u0020day\u0020</string>
    <string name="text_days">\u0020days\u0020</string>
    <string name="text_delayed_arm">Arm later</string>
    <string name="text_health_check_switch">Enable health check</string>
    <string name="text_horly_report_button">Hourly\nreport</string>
    <string name="text_info_sound">Info sound</string>
    <string name="text_last_session_duration">Last session:</string>
    <string name="text_log_button">Log</string>
    <string name="text_menu_system_log_clear_log">Clear log</string>
    <string name="text_motion_area">Motion area (%)</string>
    <string name="text_motion_check_interval">Motion interval (ms)</string>
    <string name="text_motion_sound">Motion sound</string>
    <string name="text_no_server">NO SERVER</string>
    <string name="text_noise_level">Noise level</string>
    <string name="text_notification_type_button">Notification\ntype</string>
    <string name="text_open_log_text">Open system log</string>
    <string name="text_reboot_delay">Reboot delay (sec)</string>
    <string name="text_resend_hourly_request_muted">Hourly report muted, unmute to send</string>
    <string name="text_resend_hourly_request_text">Hourly report requested</string>
    <string name="text_resend_hourly_text">Resend hourly report</string>
    <string name="text_resend_weekly_text">Open usage chart</string>
    <string name="text_retrieving_data">retrieving data</string>
    <string name="text_seconds">\u0020seconds</string>
    <string name="text_server_ping">Last time online:</string>
    <string name="text_server_uptime">Server uptime:</string>
    <string name="text_server_version">Server version:</string>
    <string name="text_settings">Settings</string>
    <string name="text_stats_button">Statistics</string>
    <string name="text_system_log_is_empty">System log is empty</string>
    <string name="text_textViewForSwitchCollectStats">Collect stats if ARMED</string>
    <string name="text_textViewForSwitchHourlyReportEnabled">Send hourly report if ARMED</string>
    <string name="text_textViewForSwitchHourlyReportForced">Always send hourly report</string>
    <string name="text_textViewForSwitchMonitoringEnabled">Show devices state in hourly report</string>
    <string name="text_textViewForSwitchShowMotionAreaEnabled">Show motion area in %</string>
    <string name="text_textViewForSwitchVerboseOutputEnabled">Enable verbose output</string>
    <string name="text_textViewForTextViewDelayedArmInterval">ARM delay, sec:</string>
    <string name="text_textViewForTextViewKeepDays">Keep history for, days:</string>
    <string name="text_textViewForTextViewRecordInterval">Record video for, sec:</string>
    <string name="text_textViewSelectCameraApp">Camera app</string>
    <string name="text_toast_automatic_mode_selected">Automatic mode selected, disable it first</string>
    <string name="text_toast_delayed_arm_in_progress">Delayed arm already in progress</string>
    <string name="text_toast_notification_muted">Notifications muted, unmute to change</string>
    <string name="text_toast_notification_type_both">You\'ll be notofied twice: as soon as new motion detected and right after video uploaded</string>
    <string name="text_toast_notification_type_motion_detected">You\'ll be notified as soon as new motion detected</string>
    <string name="text_toast_notification_type_video_recorded">You\'ll be notified as soon as video recoreded and uploaded</string>
    <string name="text_use_motion_object_switch">Display motion mask</string>

    <string name="toast_failed_to_register_on_server">Failed to register on server, please try again later</string>
    <string name="toast_info_sound_changed_to">Info sound changed to:\u0020</string>
    <string name="toast_info_sound_removed">Info sound removed</string>
    <string name="toast_motion_sound_changed_to">Motion sound changed to:\u0020</string>
    <string name="toast_motion_sound_removed">Motion sound removed</string>
    <string name="toast_server_paired_failure">Pairing failed</string>
    <string name="toast_server_paired_failure_detailed">Pairing failed, server key unrecognized, please try again</string>
    <string name="toast_server_paired_success">Pairing success</string>
    <string name="toast_server_unpair_failure">Unpairing failed</string>
    <string name="toast_server_unpair_success">Unpairing success</string>
    <string name="toast_text_data_unavailable">Data unavailable</string>

    <string name="toggle_button_text_system_mode_manual">Manual</string>
    <string name="toggle_button_text_system_mode_state_automatic">Auto</string>
    <string name="toggle_button_text_system_state_armed">Armed</string>
    <string name="toggle_button_text_system_state_disarmed">Disarmed</string>
    <string name="no_paired_servers_found">Please pair new Server</string>
    <string name="switched_active_server_to">Active server switched to\u0020</string>
    <string name="please_select_active_server">Please select active server</string>
</resources>
