<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@mipmap/shortcut_arm"
        android:shortcutId="arm"
        android:shortcutShortLabel="@string/shortcut_arm">
        <intent
            android:action="com.rudyii.hsw.client.ARM"
            android:targetClass="com.rudyii.hsw.client.activities.ShortcutsActionProcessor"
            android:targetPackage="com.rudyii.hsw.client" />
    </shortcut>

    <shortcut
        android:enabled="true"
        android:icon="@mipmap/shortcut_disarm"
        android:shortcutId="disarm"
        android:shortcutShortLabel="@string/shortcut_disarm">
        <intent
            android:action="com.rudyii.hsw.client.DISARM"
            android:targetClass="com.rudyii.hsw.client.activities.ShortcutsActionProcessor"
            android:targetPackage="com.rudyii.hsw.client" />
    </shortcut>

    <shortcut
        android:enabled="true"
        android:icon="@mipmap/shortcut_auto"
        android:shortcutId="auto"
        android:shortcutShortLabel="@string/shortcut_auto">
        <intent
            android:action="com.rudyii.hsw.client.AUTO"
            android:targetClass="com.rudyii.hsw.client.activities.ShortcutsActionProcessor"
            android:targetPackage="com.rudyii.hsw.client" />
    </shortcut>
</shortcuts>