<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewForSwitchHealthCheckEnabled3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:gravity="left|center"
        android:text="24/7"
        app:layout_constraintBottom_toBottomOf="@+id/continuousSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/continuousSwitch"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewForSwitchHealthCheckEnabled"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="left|center"
        android:text="@string/text_health_check_switch"
        app:layout_constraintBottom_toBottomOf="@+id/healthCheckEnabled"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toEndOf="@+id/healthCheckEnabled"
        app:layout_constraintTop_toTopOf="@+id/healthCheckEnabled" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/healthCheckEnabled"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:checked="false"
        android:enabled="false"
        android:hapticFeedbackEnabled="true"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/continuousSwitch"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:checked="false"
        android:enabled="false"
        android:hapticFeedbackEnabled="true"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewForSwitchUseMotionObject"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="left|center"
        android:text="@string/text_use_motion_object_switch"
        app:layout_constraintBottom_toBottomOf="@+id/useMotionObject"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toEndOf="@+id/useMotionObject"
        app:layout_constraintTop_toTopOf="@+id/useMotionObject" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/useMotionObject"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:checked="false"
        android:enabled="false"
        android:hapticFeedbackEnabled="true"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/healthCheckEnabled" />

    <TextView
        android:id="@+id/textViewForTextViewDelayedArmInterval"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:gravity="left|center"
        android:text="@string/text_motion_check_interval"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/useMotionObject" />

    <EditText
        android:id="@+id/editTextForMotionInterval"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:enabled="false"
        android:gravity="left|center"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:text="500"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewForTextViewDelayedArmInterval"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/textViewForTextViewDelayedArmInterval" />

    <TextView
        android:id="@+id/textViewForTextViewKeepDays"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:gravity="left|center"
        android:text="@string/text_motion_area"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewForTextViewDelayedArmInterval" />

    <EditText
        android:id="@+id/editTextForMotionArea"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:enabled="false"
        android:gravity="left|center"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:text="10"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewForTextViewKeepDays"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/textViewForTextViewKeepDays" />

    <TextView
        android:id="@+id/textViewForTextViewRecordInterval"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:gravity="left|center"
        android:text="@string/text_noise_level"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewForTextViewKeepDays" />

    <EditText
        android:id="@+id/editTextForNoiseLevel"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:enabled="false"
        android:gravity="left|center"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:text="5"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewForTextViewRecordInterval"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/textViewForTextViewRecordInterval" />

    <EditText
        android:id="@+id/editTextForRebootDelay"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:enabled="false"
        android:gravity="left|center"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:text="60"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewForTextViewRecordInterval2"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/textViewForTextViewRecordInterval2" />

    <TextView
        android:id="@+id/textViewForTextViewRecordInterval2"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:gravity="left|center"
        android:text="@string/text_reboot_delay"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewForTextViewRecordInterval" />

    <TextView
        android:id="@+id/textViewForTextViewRecordInterval3"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:gravity="left|center"
        android:text="@string/text_reboot_delay"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/continuousSwitch"
        app:layout_constraintTop_toBottomOf="@+id/textViewForTextViewRecordInterval" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>